[gd_scene load_steps=4 format=3 uid="uid://dmm86ulp8vt2i"]

[ext_resource type="Texture2D" uid="uid://dponl1vnsn2gu" path="res://assets/Screenshot 2023-09-28 122915.png" id="1_0nli1"]
[ext_resource type="Script" path="res://levels.gd" id="1_eoiye"]
[ext_resource type="FontFile" uid="uid://dt6rw1y18o21p" path="res://assets/PressStart2P-Regular.ttf" id="2_i4x5i"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eoiye")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("1_0nli1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.0117647, 0.227451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_i4x5i")
theme_override_font_sizes/font_size = 40
text = "LEVELS"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.447059, 0.611765, 0.278431, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ColorRect/MarginContainer"]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Level 1" type="Button" parent="VBoxContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.690196, 0.831373, 0.517647, 1)
theme_override_fonts/font = ExtResource("2_i4x5i")
text = "Level 1"

[node name="Level 2" type="Button" parent="VBoxContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.690196, 0.831373, 0.517647, 1)
theme_override_fonts/font = ExtResource("2_i4x5i")
text = "Level 2"

[node name="Level 3" type="Button" parent="VBoxContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_bottom = NodePath("../../../../../Main Menu")
theme_override_colors/font_color = Color(0.690196, 0.831373, 0.517647, 1)
theme_override_fonts/font = ExtResource("2_i4x5i")
text = "Level 3"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 0.717647, 0, 1)
theme_override_colors/font_shadow_color = Color(0.0117647, 0.227451, 0.0627451, 1)
theme_override_colors/font_outline_color = Color(0.0117647, 0.227451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_i4x5i")
theme_override_font_sizes/font_size = 20
text = "Follow the yellow arrows to arrive
at the destination and complete the level."
horizontal_alignment = 1
uppercase = true

[node name="Main Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 77.0
offset_bottom = 63.0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_neighbor_top = NodePath("../VBoxContainer/ColorRect/MarginContainer/VBoxContainer/Level 3")
focus_neighbor_bottom = NodePath("../VBoxContainer/ColorRect/MarginContainer/VBoxContainer/Level 1")
theme_override_colors/font_color = Color(0.690196, 0.831373, 0.517647, 1)
theme_override_fonts/font = ExtResource("2_i4x5i")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ColorRect/MarginContainer/VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/MarginContainer/VBoxContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorRect/MarginContainer/VBoxContainer/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
